# zero2prod

./: Cargo.toml  docker-compose.yml
.cargo/: config.toml
migrations/2023-04-19-140043_create_newsletter/: up.sql
src/: main.rs  models.rs
