[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.4", features = ["chrono", "uuid"] }
diesel-async = { version = "0.2.1", features = ["postgres"] }
dotenvy = "0.15.7"
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
uuid = { version = "1.3.1", features = ["serde", "v4"] }
